<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/tvRestaurantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/really_cool_burgers"
            android:textColor="@color/text_color_pink"
            android:textSize="@dimen/text_regular_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/western_food"
            android:layout_below="@id/tvRestaurantTitle"
            android:layout_marginStart="@dimen/margin_medium_2"
           />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/rock_street"
            android:layout_below="@id/textView7"
            android:layout_marginStart="@dimen/margin_medium_2"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/tvRestaurantTitle"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_medium_2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/corner_rounded_gray"
            android:layout_below="@id/textView8">

            <TextView
                android:id="@+id/tvPopularChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_choices"
                android:layout_margin="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_3"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBurgers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPopularChoice"/>

            <TextView
                android:id="@+id/tvBurgers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burgers"
                android:layout_below="@id/rvBurgers"
                android:layout_margin="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_3"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBurgerList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvBurgers"
                tools:listitem="@layout/burger_list_item_view"
                />
        </RelativeLayout>

</RelativeLayout>