<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activites.LoginActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            style="@style/Widget.MaterialComponents.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/tvLoginAccount"
            style="@style/Text_Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium_2"
            android:text="@string/log_in_to_you_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
            app:layout_constraintWidth_percent="0.5" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text_background"
            android:elevation="@dimen/margin_small"
            android:hint="@string/username"
            android:layout_marginTop="@dimen/margin_large_xxx"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:padding="@dimen/margin_medium_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLoginAccount"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginAccount" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:background="@drawable/round_text_background"
            android:elevation="@dimen/margin_small"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserName" />

        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:elevation="@dimen/margin_small"
            android:padding="@dimen/margin_medium_2"
            android:background="@drawable/round_text_background"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_text_background"
            android:elevation="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/phone"
            android:padding="@dimen/margin_medium_2"
            app:layout_constraintEnd_toEndOf="@+id/tvPassword"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@color/text_color_pink"
            android:text="@string/log_in"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/margin_medium_2"
            app:layout_constraintEnd_toEndOf="@+id/tvPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPhone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="8dp"
            android:padding="@dimen/margin_small"
            android:text="@string/terms_and_condition"
            android:textAlignment="center"
            android:textSize="@dimen/text_regular_2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnRegister"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:text="@string/already_an_account"
            android:textColor="@color/text_color_bold"
            android:textSize="@dimen/text_regular_2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/log_in"
            android:textColor="@color/text_color_pink"
            android:textSize="@dimen/text_regular_2"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
