<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.BasketActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSubTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/tvSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sub_total"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3"
        app:layout_constraintBottom_toTopOf="@+id/tvDelivery"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="$20"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSubTotal" />

    <TextView
        android:id="@+id/tvDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delivery_cost"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckOut"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/free"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3"
        app:layout_constraintBottom_toBottomOf="@+id/tvDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTotal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text_color_pink"
        android:text="@string/check_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>