<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.padc.fooddeliveryapp.view.components.RoundedCornerImageView
        android:id="@+id/ivRestaurant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_width"
        android:layout_margin="@dimen/margin_medium_2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:cornerRadius="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/hollywood_starz_cafe"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivRestaurant"
        app:layout_constraintTop_toBottomOf="@+id/ivRestaurant" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/western_food"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="@+id/tvResName"
        app:layout_constraintTop_toBottomOf="@+id/tvResName" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mins"
        android:textColor="@color/black"
        android:background="@drawable/round_text_background"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@+id/ivRestaurant"
        app:layout_constraintEnd_toEndOf="@+id/ivRestaurant" />


</androidx.constraintlayout.widget.ConstraintLayout>