<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.GetStartScreenActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        android:background="@drawable/corner_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="334dp">

        <TextView
            android:id="@+id/tvMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/happy_meals"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_regular_xlarge"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMeal"
            android:layout_marginTop="12dp"
            android:text="@string/discover"
            android:textColor="@color/first_color"
            android:textSize="@dimen/text_regular_2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvMeal"
            app:layout_constraintTop_toBottomOf="@+id/tvMeal"
            app:layout_constraintWidth_percent="0.6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGetStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/margin_medium_2"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintWidth_percent="0.3" />

        <View
            android:layout_width="100dp"
            android:layout_height="@dimen/margin_small"
            android:layout_marginBottom="16dp"
            android:background="@color/first_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>